# IntegralComputing

./: CMakeLists.txt
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake
sourses/: integral.cpp  integral.hpp  main.cpp  tofunction.cpp  tofunction.h
